fix contrast error checkpoint

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ main {
     margin-bottom: 30px;
 }
 header{
-    background-color: gray;
+    background-color: yellowgreen;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-style: bold;
     width: 100%;
